Name:                split
Version:             0.1.4.2
Stability:           stable
Description:         Combinator library and utility functions for splitting lists.
Homepage:            http://code.haskell.org/~byorgey/code/split
Synopsis:            Combinator library for splitting lists.
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README, Properties.hs, CHANGES
Author:              Brent Yorgey
Maintainer:          byorgey@cis.upenn.edu
Category:            List
Build-type:          Simple
Cabal-Version:       >= 1.6
Tested-with:         GHC == 6.12.3, GHC ==7.0.1, GHC ==7.2.1, GHC ==7.4.1
Source-repository head
  type:     darcs
  location: http://code.haskell.org/~byorgey/code/split

flag testing
  description: Testing mode
  default: False

library
  ghc-options:       -Wall
  Build-Depends:     base <4.6
  Exposed-Modules:   Data.List.Split, Data.List.Split.Internals
